# sharpsat-td

./: CMakeLists.txt  LICENSE  README.md  setupdev.sh
examples/: track1_009.cnf  track2_003.wcnf
flowcutter/: CMakeLists.txt  list_graph.h
src/: CMakeLists.txt  alt_component_analyzer.cpp  alt_component_analyzer.h  component_cache-inl.h  component_cache.h  component_management.cpp  component_management.h  containers.h  decomposition.cpp  decomposition.h  hasher.h  instance.cpp  instance.h  main.cpp  new_component_analyzer.cpp  new_component_analyzer.h  solver.cpp  solver.h  solver_config.h  stack.h  statistics.cpp  statistics.h  structures.h
src/clhash/: CMakeLists.txt  clhash.c
src/component_types/: CMakeLists.txt  base_packed_component.cpp  base_packed_component.h  cacheable_component.h  component.h  component_archetype.cpp  component_archetype.h  difference_packed_component.h
src/preprocessor/: CMakeLists.txt  instance.cpp  instance.hpp  oracle.cpp  oracle.hpp  preprocessor.cpp  preprocessor.hpp  subsumer.cpp  subsumer.hpp  treewidth.cpp  treewidth.hpp  twpp.cpp  twpp.hpp
